syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.luuo2000.drpc";

enum PayloadType {
    PAYLOAD_UNKNOWN = 0;
    PAYLOAD_ARRAY_INT = 1;
}

message RpcMessage {
    enum MessageType {
        MESSAGE_UNKNOWN = 0;
        MESSAGE_REQUEST = 1;
        MESSAGE_REPLY = 2;
        MESSAGE_BEST_EFFORT = 3;
    }

    fixed64 id = 1;
    fixed64 expiry = 2;
    MessageType message_type = 3;
    fixed32 payload_type = 4;
    bytes payload = 5;
    fixed64 checksum = 6;
}

message IntegerMessage {
    int32 number = 1;
}

